<resources>
    <string name="app_name">Alarmes Android Next Generation</string>
    <string name="header_alarm">Alarme</string>
    <string name="header_clock">Horloge</string>
    <string name="header_timer">Minuteur</string>
    <string name="header_stopwatch">Chrono</string>
    <string name="initial_timer">00</string>
    <string name="hour_label">h</string>
    <string name="min_label">m</string>
    <string name="sec_label">s</string>
    <string name="timer_1">1</string>
    <string name="timer_2">2</string>
    <string name="timer_3">3</string>
    <string name="timer_4">4</string>
    <string name="timer_5">5</string>
    <string name="timer_6">6</string>
    <string name="timer_7">7</string>
    <string name="timer_8">8</string>
    <string name="timer_9">9</string>
    <string name="timer_0">0</string>
    <string name="init_s_stopwatch">0</string>
    <string name="initial_stopwatch">00:00:00</string>
    <string name="stop_watchreset">Reset</string>
    <string name="stopwatch_play_desc">Play/Pause</string>
    <string name="timer_delete">Delete</string>
    <string name="default_tmrw">Demain</string>
    <string name="repeat">Repeat</string>
    <string name="vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="sync_title">Synchroniser</string>
    <string name="username">Nom d\'utilisateur:</string>
    <string name="password">Mot de passe:</string>
    <string name="connect">Se Connecter</string>
    <string name="theme_title">Theme</string>
    <string name="primary_color">Couleur Primaire</string>
    <string name="secondary_color">Couleur Secondaire</string>
    <string name="save">Sauvegarder</string>
    <string name="back_color">Couleur d\'Arriere-Plan</string>
    <string name="secondary_Back_color">Couleur d\'Avant-Plan</string>
</resources>